@@ -43,22 +43,22 @@ EBUILD emacs-18.59-r2.ebuild 2426 RMD160 5aefcffe373d6f8cef4ee2da2155a9e87b1bf6d
 MD5 0ec47d4b56fb359319372542b5da2556 emacs-18.59-r2.ebuild 2426
 RMD160 5aefcffe373d6f8cef4ee2da2155a9e87b1bf6d9 emacs-18.59-r2.ebuild 2426
 SHA256 438e7afa0e9c99ad232e86b21503e18bbe65d79f9fd85f9adc86d11b5f4cd762 emacs-18.59-r2.ebuild 2426
-EBUILD emacs-18.59-r3.ebuild 2459 RMD160 79591e9f2fdcb171a8a135db84f8c8262689c617 SHA1 cb5d44427a36c2ceebda91aa79cab69916399928 SHA256 4ab6d87a986a189746d2b27546d760b960c30b715f84bb4de5c20631da6e7db9
-MD5 9114d057c9731baf1579cdbf722a1ea0 emacs-18.59-r3.ebuild 2459
-RMD160 79591e9f2fdcb171a8a135db84f8c8262689c617 emacs-18.59-r3.ebuild 2459
-SHA256 4ab6d87a986a189746d2b27546d760b960c30b715f84bb4de5c20631da6e7db9 emacs-18.59-r3.ebuild 2459
-EBUILD emacs-21.4-r10.ebuild 4774 RMD160 61956b80f75bd3893d802ceffa012d524d1c3c10 SHA1 88d8e043e60c4b8826d315b10f4ce422085c4cad SHA256 f28448ef740b50b0d2bbdf2ff17585cd7d5dd5767bedbe19b1adc71ca6bab14f
-MD5 ac49033c4e04e53c74feb549a3006ce1 emacs-21.4-r10.ebuild 4774
-RMD160 61956b80f75bd3893d802ceffa012d524d1c3c10 emacs-21.4-r10.ebuild 4774
-SHA256 f28448ef740b50b0d2bbdf2ff17585cd7d5dd5767bedbe19b1adc71ca6bab14f emacs-21.4-r10.ebuild 4774
+EBUILD emacs-18.59-r3.ebuild 2465 RMD160 87dafe0fcdc9631503d860a1151acd946ce14aba SHA1 24ada21cade843044bef9bcf8339d8d0aab16b3e SHA256 910740f3502ac9652df9a2ddb5df720c2fff500354a1b4bb3cf4916422354e52
+MD5 cd9890c79aa5fb5e92b6630bc206b199 emacs-18.59-r3.ebuild 2465
+RMD160 87dafe0fcdc9631503d860a1151acd946ce14aba emacs-18.59-r3.ebuild 2465
+SHA256 910740f3502ac9652df9a2ddb5df720c2fff500354a1b4bb3cf4916422354e52 emacs-18.59-r3.ebuild 2465
+EBUILD emacs-21.4-r10.ebuild 4805 RMD160 488864200d5d58a5da0af3958aca656909121624 SHA1 7739ff72ea234a3306060094caa6138f3c6ff977 SHA256 a8ad7ba7823557005ddf21320d8b1d169fd37c1bfcc0143a0eabf105883ba103
+MD5 72557f9a4870a4daa7157c434593531e emacs-21.4-r10.ebuild 4805
+RMD160 488864200d5d58a5da0af3958aca656909121624 emacs-21.4-r10.ebuild 4805
+SHA256 a8ad7ba7823557005ddf21320d8b1d169fd37c1bfcc0143a0eabf105883ba103 emacs-21.4-r10.ebuild 4805
 EBUILD emacs-21.4-r9.ebuild 4818 RMD160 3d4ee54a86411a6452c5342c2a9c355281635fc5 SHA1 2833621b23c90878e9d53dfed555b13c03c029d5 SHA256 2fb07eeacbe6d39f5aadf10886a2cf75c3fa579d137e2125c66c7b5a0ac4d627
 MD5 f1a3cea98f9638a1d344874cb5f75b7b emacs-21.4-r9.ebuild 4818
 RMD160 3d4ee54a86411a6452c5342c2a9c355281635fc5 emacs-21.4-r9.ebuild 4818
 SHA256 2fb07eeacbe6d39f5aadf10886a2cf75c3fa579d137e2125c66c7b5a0ac4d627 emacs-21.4-r9.ebuild 4818
-MISC ChangeLog 1331 RMD160 3ada4c2787653b5032ea840fab8a01b8afa41121 SHA1 c4566cdfa86cf61a6fe0846e4aab43a3e4510bf7 SHA256 c588744c56084a8b2ffd2669e7f78185d8321b748ff3970b33c7b8e689316d3f
-MD5 bda93d43be79b968171a3d170b20ffe6 ChangeLog 1331
-RMD160 3ada4c2787653b5032ea840fab8a01b8afa41121 ChangeLog 1331
-SHA256 c588744c56084a8b2ffd2669e7f78185d8321b748ff3970b33c7b8e689316d3f ChangeLog 1331
+MISC ChangeLog 1775 RMD160 afaba04c40ce8f8ce5da8610bcc418fde4a3274b SHA1 6e5a96c4011346d479ebba069c8568a3d130f6fd SHA256 4f66d143ad41941666409b6cd220acc1aa1c5ad7812baf8ca8b2d3f71e7ebfce
+MD5 c15cb2d500e3513f323facf2da244a88 ChangeLog 1775
+RMD160 afaba04c40ce8f8ce5da8610bcc418fde4a3274b ChangeLog 1775
+SHA256 4f66d143ad41941666409b6cd220acc1aa1c5ad7812baf8ca8b2d3f71e7ebfce ChangeLog 1775
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
